Game list monospace font, bigger width to avoid wrapping

--- a/src/public/client.css
+++ b/src/public/client.css
@@ -56,6 +56,10 @@ pre {
 
 div#gameList {
 	height: 240px;
-	width: 320px;
+	width: 500px;
 	overflow:auto;
+}
+
+#gameList li {
+	font-family: monospace;
 }
